+ Add build code

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,13 @@
 /.project
+.idea/
+.DS_Store
+
+### Andoid Project Folder ###
+
+### CodeIgniter template
+*/config/development
+*/logs/log-*.php
+!*/logs/index.html
+*/cache/*
+!*/cache/index.html
+!*/cache/.htaccess
